# backworks

./: .dockerignore  .gitignore  ARCHITECTURE.md  ARCHITECTURE_REVISION.md  ARCHITECTURE_SIMPLIFICATION.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.workspace.toml  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md  DIRECTION.md  Dockerfile  Dockerfile.dev  EXTENSIBILITY.md  EXTERNAL_PLUGIN_ARCHITECTURE.md  EXTERNAL_PLUGIN_COMPLETE.md  FINAL_ARCHITECTURE.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_ROADMAP.md  ISSUES.md  PLUGIN_ARCHITECTURE_COMPLETE.md  PLUGIN_DYNAMIC_LOADING_DESIGN.md  PLUGIN_IMPLEMENTATION_STATUS.md  PRIORITIES.md  PROJECT_TRANSFORMATION_STATUS.md  PROXY_PLUGIN_ARCHITECTURE.md  README.md  README_NEW.md  TRANSFORMATION_COMPLETE.md  UNIVERSAL_ARCHITECTURE.md  VALIDATION_REPORT.md  clippy.toml  dashboard-test-config.yaml  docker-compose.yml  setup.sh  simple-test-config.yaml  test-config.yaml  test-external-plugins.yaml  test_dashboard_integration.sh  (+7 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
dashboard/: index.html  package.json
dashboard/src/: global.css
dashboard/src/components/: api-tester.tsx  blueprint-designer.tsx  layout.tsx  metric-card.tsx  request-log-viewer.tsx  workflow-form.tsx
dashboard/src/routes/: index.tsx
docs/: CONSOLIDATED_ARCHITECTURE.md  DEVELOPER_GUIDE.md  MOCK_FREE_ARCHITECTURE.md  README.md  REFACTORING_PLAN.md  ai-features.md  architecture.md  configuration.md  dashboard.md  modes.md  plugin-architecture.md  quick-start.md
examples/: README.md  blueprint-with-issues.yaml
examples/advanced-proxy/: README.md  blueprint.yaml  package.json
examples/advanced-proxy/blueprints/: main.yaml
examples/advanced-proxy/handlers/: dashboard-aggregator.js  post-transform.js  posts-proxy.js  posts-request-transform.js  request-transform.js  response-transform.js
examples/advanced/ai-powered-api/: README.md  backworks.yaml  schema.sql
examples/auth-api/: .gitignore  README.md  package.json
examples/auth-api/blueprints/: main.yaml
examples/basic/simple-api/: README.md  backworks.yaml  (+1 more)
examples/blog-api/: README.md  api.yaml  blueprint.yaml  package.json
examples/bwin/: package.json
examples/capture/: advanced-capture.yaml  basic-capture.yaml  ecommerce-capture.yaml  realtime-capture.yaml  simple-proxy-capture.yaml
examples/e-commerce-platform/: README.md  blueprint.yaml
examples/ecommerce-multi-target/: README.md  blueprint.yaml
examples/hello-world/: README.md  backworks.json  blueprint.yaml  package.json
examples/proxy/: http-proxy-basic.yaml
examples/proxy-advanced/: README.md  package.json
examples/proxy-api/: README.md  blueprint.yaml  package.json
examples/task-manager/: README.md  api.yaml  backworks-streamlined.json  backworks.json  package.json
plugins/: README.md
plugins/backworks-proxy-plugin/: .gitignore  Cargo.toml
plugins/backworks-proxy-plugin/src/: circuit_breaker.rs  error.rs  health_check.rs  lib.rs  load_balancer.rs  metrics.rs  plugin.rs  proxy.rs  transformations.rs
plugins/backworks-proxy-plugin/tests/: integration_tests.rs
scripts/: build.sh  release.sh
src/: ai.rs  ai_old.rs  analyzer.rs  capture.rs  config.rs  dashboard.rs  dashboard_old.rs  database.rs  engine.rs  error.rs  lib.rs  main.rs  mock.rs  plugin.rs  proxy.rs  resilience.rs  runtime.rs  server.rs
src/plugin/: discovery.rs  dynamic.rs
src/plugins/: ai.rs  mod.rs
studio/: package.json
studio/src/: global.css
tests/: capture_integration_tests.rs  external_plugin_tests.rs  proxy_basic_test.rs  proxy_capture_integration_tests.rs
(+32 files in other folders)
